# ros2_rc

./: README.md  frames_2024-09-23_16.04.49.gv  frames_2024-10-14_11.42.06.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/car_gazebo_plugin/share/car_gazebo_plugin/: package.sh
install/costmap_queue/share/costmap_queue/: local_setup.sh  package.sh
install/dwb_core/share/dwb_core/: package.sh
install/dwb_critics/share/dwb_critics/: package.sh
install/dwb_msgs/share/dwb_msgs/: package.sh
install/dwb_plugins/share/dwb_plugins/: package.sh
install/nav2_amcl/lib/nav2_amcl/: amcl
install/nav2_amcl/share/nav2_amcl/: local_setup.sh  package.sh
install/nav2_behavior_tree/share/nav2_behavior_tree/: package.sh
install/nav2_behaviors/lib/nav2_behaviors/: behavior_server
install/nav2_behaviors/share/nav2_behaviors/: local_setup.sh  package.sh
install/nav2_bringup/share/nav2_bringup/: package.sh
log/: latest_build
src/: frames_2024-10-14_16.49.49.gv  frames_2024-10-31_11.53.48.gv
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/ros2_rc/: CMakeLists.txt
src/smart_car/: CMakeLists.txt
src/smart_car/config/: nav2_params.yaml
src/smart_car/install/: local_setup.sh  setup.sh
src/smart_car/install/smart_car/share/smart_car/: local_setup.sh  package.sh
src/smart_car/install/smart_car/share/smart_car/launch/: gazebo.launch.py
src/smart_car/install/smart_car/share/smart_car/urdf/: smart_car.urdf  smartcar.urdf.xacro
src/smart_car/launch/: nav2.launch.py  rviz_.launch.py
src/smart_car/log/: latest_build
src/smart_car/rviz/: nav2_default_view.rviz
src/smart_car/script/: wheel_odom_node.py
src/smart_car/urdf/: smartcar.urdf.xacro
src/smartcar_msgs/: CMakeLists.txt
src/smartcar_msgs/install/: local_setup.sh  setup.sh
src/smartcar_msgs/log/: latest_build
(+186 files in other folders)
